Closed Bug 1906835 Opened 7 months ago Closed 7 months ago

nsMsgDBFolder backup database isn't closed if the normal database is already closed

Categories

(MailNews Core :: General, defect)

defect

Tracking

(thunderbird_esr128+ fixed, thunderbird129 fixed)

RESOLVED FIXED
130 Branch
Tracking Status
thunderbird_esr128 + fixed
thunderbird129 --- fixed

People

(Reporter: darktrojan, Assigned: darktrojan)

References

(Blocks 1 open bug)

Details

(Keywords: memory-leak)

Attachments

(1 file)

In this folder clean-up code nsMsgDBFolder::Shutdown, mBackupDatabase is only closed and nulled out if mDatabase exists. Apparently, it's possible for mBackupDatabase to exist when mDatabase doesn't. This happens in local folder repair, and browser_repairFolder.js reports a leak of a bunch of database, folder, and message objects.

Target Milestone: --- → 130 Branch

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/0dd3a34992d1
Always close backup database in nsMsgDBFolder::Shutdown. r=BenC DONTBUILD CLOSED TREE

Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED

Comment on attachment 9411732 [details]
Bug 1906835 - Always close backup database in nsMsgDBFolder::Shutdown. r=BenC

[Triage Comment]
Approved for beta so we can get this to 128 quickly.

Attachment #9411732 - Flags: approval-comm-beta+

Geoff, We'd like to pick this up in 128.1.0esr. Please let us know if you have any concerns with shipping this.

Comment on attachment 9411732 [details]
Bug 1906835 - Always close backup database in nsMsgDBFolder::Shutdown. r=BenC

[Triage Comment]
Approved for esr128

Attachment #9411732 - Flags: approval-comm-esr128+
Blocks: tb128found
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: