Bug 1906835 - Always close backup database in nsMsgDBFolder::Shutdown. r=BenC DONTBUILD CLOSED TREE

Differential Revision: https://phabricator.services.mozilla.com/D216017

--HG--
extra : rebase_source : e188068df17cb86ac46aff0763f099d7353eaed5
extra : amend_source : 5da50ff031eb797beae84967d846f17d55735947